fix overlap #promptAccountPopup

--- a/style.css
+++ b/style.css
@@ -593,13 +593,13 @@ footer ul li a:hover{
 #promptAccountPopup {
     width:100%;
     height:100%;
-    opacity:.95;
     top:0;
     left:0;
     display:none;
     position:fixed;
-    background-color:#313131;
-    overflow:auto
+    background-color:rgba(49,49,49,.9);
+    overflow:auto;
+    z-index: 1000;
 }
 
 div#popupAccount {
